--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 			<section id="header-menu" class="requireJs" toggle-effect="none">
 				<div id="upper-nav" class="menu-upper-menu-container"><ul id="menu-upper-menu" class="menu">
 				<li><a href="home.html"><i class="fas fa-home"></i>Home</a></li>
-<li><a href="#"><i class="fas fa-clipboard-list"></i>Orders</a></li>
+<li><a href="tel:01118786686"><i class="fas fa-clipboard-list"></i>Orders</a></li>
 <li><a href="faq-list.html"><i class="fas fa-sticky-note"></i>Blog</a></li>
 <li><a href="#"><i class="fas fa-headset"></i>Contact</a></li>
 </ul></div>	
